# Custom-Decentralized-Ledger

./: README.md
chronoflux/: .env_tem  Cargo.toml
chronoflux/src/: lib.rs
chronoflux/src/domain/: block.rs  blockchain.rs  mod.rs  proof_of_work.rs  transactions.rs
chronoflux/src/server/: mod.rs  tcp_server.rs
chronoflux/src/utils/: constants.rs  utils.rs
private-key-gen-cli/: .gitIgnore  Cargo.toml
private-key-gen-cli/src/: ecrypto.rs  main.rs  models.rs  utils.rs
transaction/: Cargo.toml
transaction/src/: app_state.rs  lib.rs  main.rs
transaction/src/domain/: data_stores.rs  email.rs  error.rs  mod.rs  transaction.rs
transaction/src/routes/: create_tx.rs  get_all_tx.rs  get_tx_by_index.rs  mod.rs  sign_tx.rs
transaction/src/services/: mod.rs  vector_tx_store.rs
transaction/src/utils/: mod.rs  tx_singing.rs
transaction/tests/api/: create_tx.rs  get_all_tx.rs  get_one_tx.rs  health_check.rs  helper.rs  main.rs  sign_tx.rs
