[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.78"
validator = "0.16.1"
sha2 = "0.10.8"
ring = "0.17.8"
hex = "0.4.3"

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
